# cpp-template

./: CMakeLists.txt  README.md  cargo-generate.toml  ch
src/: main.cpp
